# Patcher

./: .gitmodules  CMakeLists.txt  README.md  Readme.md  Templates.ini  check.bat
cmake/: MSVC_addons.cmake  build_options.cmake
include/DBProvider/: Connection.h  ConnectionBase.h  ConnectionPool.h  ConnectionThreadSafe.h  ConnectionsPool.h  DBConnection.h  DBProvider.h  DBProviderLogger.h  DBRequests.h  Login.h  LoginData.h
include/PatchBuilder/: PatchBuilder.h
include/PatchInstaller/: DependenciesChecker.h  FileParser.h  Logger.h  PatchInstaller.h
include/Shared/: DBObjects.h  Logger.h  ParsingTools.h  TestUtility.h  TextTable.h
src/: Connection.cpp  ConnectionBase.cpp  ConnectionPool.cpp  ConnectionThreadSafe.cpp  ConnectionsPool.cpp  DBConnection.cpp  DBObjects.cpp  DBProvider.cpp  DBProviderLogger.cpp  DBRequests.cpp  DependenciesChecker.cpp  FileParser.cpp  Logger.cpp  LoginData.cpp  ParsingTools.cpp  PatchBuilder.cpp  PatchBuilder_exe.cpp  PatchInstaller.cpp  PatchInstaller_exe.cpp  TestUtility.cpp  TextTable.cpp
tests/: DBProvider_tests.cpp
tests/DBProvider_google_tests/: Test_DBConnection.cpp  Test_DBProvider.cpp  Test_DBProvider_Methods.cpp  Test_DBProvider_Objects.cpp  Test_DBProvider_PrepareQueries.cpp  Test_PqxxConnection.cpp
